fix: only run hybrid module resolution for JavaFX, not unconditionally
Making the hybrid module-path promotion unconditional (dc3ef46e) broke the
smoke-quarkus-test. A plain class-path app such as a Quarkus CLI fails at
startup with:

  Exception in thread "main" java.lang.ExceptionInInitializerError
  Caused by: java.lang.IllegalArgumentException: This library does not have
    private access to interface io.smallrye.config._private.ConfigLogging

because hybrid promotes `jboss-logging` to a named module on the
`--module-path` while `smallrye-config` stays on the class-path (unnamed
module). A named module cannot read the unnamed module, so jboss-logging's
reflective logger-proxy generation into smallrye-config's `_private` package
is denied. Frameworks like Quarkus rely on the relaxed access of the
class-path and cannot run as auto-generated named modules.

Gate the hybrid resolution on `hasJavaFX()` again (keeping the generic
requires-graph logic, dropping the name-matching). `//MODULE` scripts don't
need this path: the command generators already put their whole class-path on
the module-path via `-p` and launch with `-m`, so JavaFX detection is the
correct and sufficient trigger.

Verified: TestRun, DependencyResolverTest, TestArtifactInfo and TestModule
pass; the qcli smoke test runs again (prints "Hello World!!", class-path only).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>